[FIX] Improved Help screen (Removed extra spaces between description and graph).

--- a/addons/view_diagram/static/css/process.css
+++ b/addons/view_diagram/static/css/process.css
@@ -40,6 +40,8 @@ a.help-button-a small {
 
 .process-notes dt {
     font-weight: bold;
+    margin-left: 20px;
+    margin-bottom: 4px;
 }
 
 .process-notes dd {
